package com.forecastpro.entity;

public enum MessageStatus {
    OPEN,
    CLOSED,
    RESOLVED
}
