package com.forecastpro.entity;

public enum UserRole {
    ADMIN,
    SALES_MANAGER,
    EMPLOYEE,
    VENDOR
}
